fixed textInput having scrollbar when first loaded without text, added loading animation for bot typing

--- a/app/static/styles/user_chatbox_style.css
+++ b/app/static/styles/user_chatbox_style.css
@@ -299,3 +299,43 @@ all and (max-height: 480px) {
     right:0;
     width: 300px;
 }
+
+
+:root {
+    --animationTime: 0.8s;
+    --dotSize: 0.4375rem;
+}
+
+.loader {
+    text-align: center;
+}
+
+.loader span {
+    margin-right: 0.1875rem;
+    display: inline-block;
+    vertical-align: middle;
+    width: var(--dotSize);
+    height: var(--dotSize);
+    background: black;
+    border-radius: var(--dotSize);
+    animation: loader var(--animationTime) infinite alternate;
+}
+
+.loader span:nth-of-type(2) {
+    animation-delay: 0.2s;
+}
+
+.loader span:nth-of-type(3) {
+    animation-delay: 0.6s;
+}
+
+@keyframes loader {
+  0% {
+    opacity: 0.9;
+    transform: scale(0.5);
+  }
+  100% {
+    opacity: 0.1;
+    transform: scale(1);
+  }
+}
